fix pullSecret type

--- a/common/acm-observability/templates/pull-secret.yaml
+++ b/common/acm-observability/templates/pull-secret.yaml
@@ -11,7 +11,7 @@ spec:
   target:
     name: multiclusterhub-operator-pull-secret
     template:
-      type: kubernetes.io/dockerconfigjson
+      type: "kubernetes.io/dockerconfigjson"
   dataFrom:
   - extract:
       key: {{ .Values.pullSecret.key }}
