--- a/common/acm-observability/templates/pull-secret.yaml
+++ b/common/acm-observability/templates/pull-secret.yaml
@@ -14,4 +14,4 @@ spec:
       type: "kubernetes.io/dockerconfigjson"
   dataFrom:
   - extract:
-      key: {{ .Values.pullSecret.key }}
+      key: {{ .Values.pullSecret.key | base64encode }}
