--- a/common/acm-observability/templates/pull-secret.yaml
+++ b/common/acm-observability/templates/pull-secret.yaml
@@ -4,14 +4,18 @@ metadata:
   name: multiclusterhub-operator-pull-secret
   namespace: open-cluster-management-observability
 spec:
-  refreshInterval: 15s
+  refreshInterval: 1h
   secretStoreRef:
     name: {{ .Values.secretStore.name }}
     kind: {{ .Values.secretStore.kind }}
   target:
     name: multiclusterhub-operator-pull-secret
     template:
-      type: "kubernetes.io/dockerconfigjson"
-  dataFrom:
-  - extract:
-      key: {{ .Values.pullSecret.key | base64encode }}
+      type: kubernetes.io/dockerconfigjson
+      engineVersion: v2
+      data:
+        .dockerconfigjson: "{{ `{{ .content }}` }}"
+  data:
+  - secretKey: content
+    remoteRef:
+      key: {{ .Values.pullSecret.key }}
